# wgpu-multi-draw-perf

./: Cargo.toml
src/: main.rs  shader.wgsl
