[package]
name = "indirect-draw-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
clap = { version = "4.0.8", features = ["derive"] }
glam = { version = "0.21.3", features = ["bytemuck"] }
pollster = "0.2.5"
wgpu = "0.13.1"
winit = "0.27.3"
